--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,3 +65,5 @@ flutter:
     - Icons/chat_icon.svg
     - Icons/add_icon.svg
     - Icons/analytics_icon.svg
+    - images/man.png
+    - images/edit_icon.png
