--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   hexcolor: ^3.0.1
   flutter_svg: ^2.0.7
   http: ^1.1.0
+  fluttertoast: ^8.2.2
+  double_back_to_close_app: ^2.1.0
 
 dev_dependencies:
   flutter_test:
