--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   http: ^1.1.0
   fluttertoast: ^8.2.2
   double_back_to_close_app: ^2.1.0
+  dropdown_button2: ^2.3.9
+  csc_picker: ^0.2.7
 
 dev_dependencies:
   flutter_test:
