--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   double_back_to_close_app: ^2.1.0
   dropdown_button2: ^2.3.9
   country_picker: ^2.0.21
+  google_sign_in: ^6.1.5
 
 dev_dependencies:
   flutter_test:
