--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   dropdown_button2: ^2.3.9
   country_picker: ^2.0.21
   google_sign_in: ^6.1.5
+  realm: ^1.5.0
 
 dev_dependencies:
   flutter_test:
