--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   country_picker: ^2.0.21
   google_sign_in: ^6.1.5
   realm: ^1.5.0
+  auto_route: ^7.8.4
 
 dev_dependencies:
   flutter_test:
