--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   google_sign_in: ^6.1.5
   realm: ^1.5.0
   auto_route: ^7.8.4
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
   shared_preferences: ^2.2.2
   device_preview: ^1.1.0
 
