--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   hive_flutter: ^1.1.0
   shared_preferences: ^2.2.2
   device_preview: ^1.1.0
+  path_provider: ^2.1.1
 
 dev_dependencies:
   flutter_test:
