--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   device_preview: ^1.1.0
   path_provider: ^2.1.1
   intl: ^0.18.1
+  date_format: ^2.0.7
 
 dev_dependencies:
   flutter_test:
