--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   path_provider: ^2.1.1
   intl: ^0.18.1
   date_format: ^2.0.7
+  numberpicker: ^2.1.2
 
 dev_dependencies:
   flutter_test:
