--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   numberpicker: ^2.1.2
   flutter_bloc: ^8.1.3
   equatable: ^2.0.5
+  fl_chart: ^0.64.0
 
 dev_dependencies:
   flutter_test:
