--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,12 @@ dependencies:
   flutter_bloc: ^8.1.3
   equatable: ^2.0.5
   fl_chart: ^0.64.0
+  firebase_storage: ^11.5.2
+  firebase_core: ^2.23.0
+  firebase_analytics: ^10.7.1
+  cloud_firestore: ^4.13.2
+  image_picker: ^1.0.4
+  path: ^1.8.3
 
 dev_dependencies:
   flutter_test:
