--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   image_picker: ^1.0.4
   path: ^1.8.3
   flutter_barcode_scanner: ^2.0.0
+  syncfusion_flutter_charts: ^22.2.12
 
 dev_dependencies:
   flutter_test:
