--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   path: ^1.8.3
   flutter_barcode_scanner: ^2.0.0
   syncfusion_flutter_charts: ^22.2.12
+  kommunicate_flutter: ^1.7.9
 
 dev_dependencies:
   flutter_test:
