--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_barcode_scanner: ^2.0.0
   syncfusion_flutter_charts: ^22.2.12
   kommunicate_flutter: ^1.7.9
+  fuzzy: ^0.5.1
 
 dev_dependencies:
   flutter_test:
